2009-07-01  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* js/CalDAVAclManager.js: we become a bit more foolprop when an
	XMLHttpRequest fails for a reason or another and delete the
	corresponding entry so that the request can happen again.

2009-06-30  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	*chrome/content/sogo-connector/addressbook/preferences.addressbook.groupdav.js:
	removed "display synchronization dialog" from groupdav addressbook
	settings window.
	chrome/content/sogo-connector/general/sync.addressbook.groupdav.js:
	fixed a bug where list downloads would tranmis the tag
	"vcard-download" instead of "list-download", preventing the
	downloaded lists from being created or updated.

2009-06-23  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* chrome/content/sogo-connector/general/sync.addressbook.groupdav.js:
	refactored code and added support for webdav sync spec.

2009-06-22  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* chrome/content/inverse-library/sogoWebDAV.js: modified to
	convert a result set returned as XML to a javascript structure of
	objects.

2009-06-10  Francis Lachapelle  <flachapelle@inverse.ca>

	* chrome/content/sogo-connector/general/vcards.utils.js: fixed the
	telephone attribute mapping.

2009-06-10  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* chrome/content/sogo-connector/addressbook/addressbook.groupdav.overlay.js:
	restored the ability to synchronize addressbook while the
	selection is currently in the results pane (right list).

	* chrome/content/sogo-connector/general/sync.addressbook.groupdav.js:
	refactored the code and added support for ctag-based synchronisation.

	* chrome/content/sogo-connector/general/preference.service.addressbook.groupdav.js:
	added methods for saving and retrieving the ctag of ab collections.

	* chrome/content/sogo-connector/general/implementors.addressbook.groupdav.js:
	removed obsolete module.

2009-04-06  Ludovic Marcotte <lmarcotte@inverse.ca>

        * Bumped version number to 0.93
